<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_chat"
            android:icon="@drawable/ic_add"
            android:title="@string/action_new_chat" />

        <item
            android:id="@+id/nav_select_model"
            android:icon="@drawable/ic_model"
            android:title="@string/nav_models" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_sessions" />
    </group>

    <item android:title="@string/settings_data_section">
        <menu>
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_export"
                android:title="@string/settings_export_data" />

            <item
                android:id="@+id/nav_clear_history"
                android:icon="@drawable/ic_delete"
                android:title="@string/settings_clear_history" />
        </menu>
    </item>

    <item android:title="@string/settings_about_section">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />

            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/settings_privacy" />

            <item
                android:id="@+id/nav_terms"
                android:icon="@drawable/ic_terms"
                android:title="@string/settings_terms" />
        </menu>
    </item>

</menu>
